# Ment-OS-in-Rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  run.sh  x86_64-ment_os.json
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs
os/: Cargo.toml
os/src/: main.rs
src/: gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
