[package]
name = "ment_os"
version = "0.1.0"
edition = "2021"
authors = ["H-Chris233"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "=0.14.10"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[patch.crates-io]
bootloader = { path = "vendor/bootloader-0.9.33" }
